# genai-security-training

./: .gitignore  INSTRUCTOR_GUIDE.md  LICENSE  QUICK_START.md  README.md  pyproject.toml  requirements.txt
modules/01_introduction/: 03_adversarial_mindset.md
modules/01_introduction/labs/: lab1_environment_setup.ipynb
modules/03_evasion/: NOTEBOOK_GUIDE.md  README.md  adversarial_nlp.ipynb  certified_defenses.ipynb
modules/03_evasion/labs/: ANSWERS.ipynb  lab1_whitebox_evasion.ipynb  lab2_blackbox_evasion.ipynb  lab3_text_attacks.ipynb  lab4_transfer_attacks.ipynb  lab5_certified_robustness.ipynb
modules/03_evasion/utils/: __init__.py  hop_skip_jump.py
modules/04_data_extraction/: 01_training_data_extraction.md  README.md
modules/04_data_extraction/labs/: ANSWERS.ipynb  lab1_training_data_extraction.ipynb  lab2_membership_inference.ipynb  lab3_model_inversion.ipynb
modules/05_poisoning/: README.md
modules/05_poisoning/labs/: ANSWERS.ipynb  lab1_data_poisoning.ipynb  lab2_backdoor_attacks.ipynb  lab3_llm_poisoning.ipynb  lab4_defense_detection.ipynb
modules/06_advanced_attacks/: 04_fairness_attacks.md  05_interpretability_security.md  06_federated_learning.md  07_ai_safety_alignment.md  README.md
modules/06_advanced_attacks/labs/: lab1_model_extraction.ipynb  lab2_fairness_attacks.ipynb  lab3_interpretability_attacks.ipynb  lab4_federated_attacks.ipynb  lab5_agent_attacks.ipynb  lab6_serialization_attacks.ipynb  lab7_multimodal_attacks.ipynb  lab8_supply_chain_attacks.ipynb
modules/07_assessment/: 01_testing_frameworks.md  02_art_integration.md  03_automated_testing.md  README.md
modules/07_assessment/labs/: ANSWERS.ipynb  lab1_art_framework.ipynb  lab2_textattack.ipynb  lab3_shap.ipynb  lab4_comprehensive_assessment.ipynb
modules/08_capstone/: 01_capstone_structure.md  02_scenarios.md  README.md  capstone_project.ipynb  executive_summary.txt
