[project]
name = "genai-security-training"
version = "0.1.0"
description = "A comprehensive, self-paced training curriculum for security researchers focused on red teaming GenAI and AI/ML systems"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "CC-BY-NC-4.0" }
authors = [{ name = "schwartz1375" }]
keywords = [
    "ai-security",
    "genai",
    "red-teaming",
    "adversarial-ml",
    "llm-security",
    "machine-learning",
    "security-training",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core ML/AI Libraries
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    # NLP & Embeddings
    "sentence-transformers>=2.2.0",
    # Image Processing
    "Pillow>=10.0.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Jupyter and Notebooks
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    # Utilities
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    # Testing
    "pytest>=7.4.0",
    # Lab-specific packages
]

[project.optional-dependencies]
# Note: Lab-specific packages (adversarial-robustness-toolbox, textattack, shap)
# are installed on-demand by labs when needed, as they have version conflicts
# with Python 3.12+ and core dependencies. See requirements.txt for details.
optional = [
    # Optional packages for experimentation beyond labs
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "langchain>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genai_security_training"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
